--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=CRUD
+spring.datasource.url=jdbc:postgresql://localhost:5433/crud
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
